crates/uitest/fixtures/ty_check/recv_duplicate_selector.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/recv_duplicate_selector.fe
---
error[8-0047]: duplicate selector across recv blocks
   ┌─ recv_duplicate_selector.fe:13:5
   │
 5 │     Deposit { amount: u64 } -> u64,
   │     ------- `Deposit` with selector 0x00000001 declared here
   ·
13 │     Transfer { to: u64, amount: u64 } -> bool,
   │     ^^^^^^^^ `Transfer` has selector 0x00000001 which conflicts with `Deposit`
   │
   = each msg variant in a contract must have a unique selector
